# template-repository

./: .gitignore  Cargo.toml  Instructions.md  METRICS.md  Task.md  architecture.csv  check_naming.sh  dept.csv  memories.csv  naming.toml  naming_report.txt  test_naming.rs  todo.csv
.github/workflows/: naming.yml
benches/: speed.rs
crates/architecture/: Cargo.toml
crates/architecture/src/: lib.rs
crates/bedrock/: Cargo.toml
crates/bedrock/src/: entity.rs  error.rs  lib.rs  sled.rs
crates/kernel/: Cargo.toml  README.md
crates/kernel/examples/: builder.rs  bulk_storage.rs  cache_pool.rs  engine.rs  export_demo.rs  logger.rs  plugin.rs  router.rs  serializer.rs  storage.rs  time_utils.rs  validator.rs
crates/kernel/src/: builder.rs  config.rs  engine.rs  error.rs  extension.rs  lib.rs  logger.rs  plugin.rs  router.rs  serializer.rs  validator.rs
crates/kernel/src/storage/: actor.rs  cache.rs  export.rs  mod.rs  sled.rs
crates/kernel/src/storage/actor/: handler.rs  message.rs  state.rs
crates/kernel/src/storage/export/: README.md  tests.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: architecture.rs  display.rs  lib.rs  main.rs  memories.rs  task.rs
crates/memories/: Cargo.toml
crates/memories/src/: lib.rs
crates/naming/: Cargo.toml  USAGE.md
crates/naming/benches/: bench.rs
crates/naming/src/: lib.rs  violation.rs
crates/naming/src/helper/: conf.rs  file.rs  mod.rs  stat.rs  text.rs  warn.rs
crates/naming/src/rules/: ast.rs  line.rs  metric.rs  mod.rs  report.rs
crates/repository/: Cargo.toml
crates/repository/src/: actor.rs  entity.rs  error.rs  extension.rs  lib.rs  metric.rs  pool.rs  sled.rs  storage.rs  time.rs
crates/repository/src/pool.rs crates/repository/src/: extension.rs
crates/shared/: Cargo.toml
crates/shared/src/: interaction.rs  lib.rs
crates/task/: Cargo.toml
crates/task/benches/: speed.rs
crates/task/examples/: tracing_demo.rs
crates/task/src/: lib.rs
crates/todo/: Cargo.toml
crates/todo/benches/: speed.rs
crates/todo/examples/: tracing_demo.rs
crates/todo/src/: lib.rs
examples/: tracing_demo.rs
src/: cache.rs  entity.rs  error.rs  extension.rs  lib.rs  metric.rs  pool.rs  sled.rs  storage.rs  todo.rs
