[workspace]
members = [
    "crates/repository",
    "crates/todo",
    "crates/architecture", 
    "crates/memories",
    "crates/knowledge",
    "crates/shared"
]

resolver = "2"

[workspace.dependencies]
# Lưu trữ K-V nhúng hiệu năng cao
sled = "0.34"
# Serialization/Deserialization hiệu quả
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# ID duy nhất cho mỗi task
uuid = { version = "1.3", features = ["v4", "serde"] }
# Phân tích đối số dòng lệnh
clap = { version = "4.2", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# Thư viện tracing để theo dõi và ghi log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21.3"
# Lock-free synchronization primitives
parking_lot = "0.12"
# Thư viện để làm việc với CSV
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

# [workspace.dependencies]
criterion = "0.4"
tempfile = "3.5" 
rand = "0.8"

# Tối ưu hóa các bản build phát hành để đạt hiệu năng tối đa
[profile.release]
# Bật Link Time Optimization (LTO) để cải thiện hiệu năng với chi phí thời gian biên dịch
lto = "fat"
# Đặt thành 1 để tối ưu hóa tối đa nhưng thời gian biên dịch lâu hơn
codegen-units = 1
# Sử dụng abort thay vì unwind cho panic trong chế độ phát hành để giảm kích thước binary
panic = "abort"
# Bật tối ưu hóa ở mức tối đa
opt-level = 3
# Loại bỏ các ký hiệu debug để giảm kích thước binary
strip = true
# Vô hiệu hóa biên dịch gia tăng trong chế độ phát hành
incremental = false
