[package]
name = "architecture"
version = "0.1.0"
edition = "2021"

[features]
# Feature metrics để bật/tắt hệ thống đo lường hiệu suất
metrics = []

[dependencies]
serde = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }
repository = { path = "../repository" }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }