[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
num_cpus = "1.0"
uuid.workspace = true
tempfile.workspace = true
thiserror.workspace = true
sled.workspace = true
csv.workspace = true

[features]
default = []
metrics = []
testing = []

[[example]]
name = "export_demo"
path = "examples/export_demo.rs" 
