[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"

[features]
# Feature metrics để bật/tắt hệ thống đo lường hiệu suất
metrics = []

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
repository = { path = "../repository" } # Để truy cập Sled và Error
architecture = { path = "../architecture" } # Để tương tác với bản ghi kiến trúc
memories = { path = "../memories" }     # Để tương tác với bản ghi bộ nhớ
task = { path = "../task" }             # Để tương tác với bản ghi công việc
shared = { path = "../shared" }         # Để tương tác với bản ghi công việc