[package]
name = "naming"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
proc-macro2 = "1"
once_cell = "1"
rayon = "1"
sysinfo = "0.30"
num_cpus = "1.14.0"
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
