[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
repository  = {path = "../repository"}
chrono = "0.4.41"
shared = { path = "../shared" }


[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }

# Kích hoạt feature 'testing' khi chạy benchmark
[[bench]]
name = "speed"
harness = false
